[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xconn-docs"
version = "0.1.0"
authors = [
  {name="Omer Akram", email="omer@xconn.io"},
  {name="Mahad Munir", email="mahad@xconn.io"},
]
description = "https://github.com/xconnio/xconn-docs"
readme = "README.md"
dependencies = ["mkdocs-material[imaging]"]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
"Homepage" = "https://github.com/xconnio/xconn-docs"
"Bug Tracker" = "https://github.com/xconnio/xconn-docs/issues"

line-length = "120"
indent-width = "4"

target-version = "py312"
